--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas Revou</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="nav-container">
+        <div>Ini </div>
+        <nav>
+            <button>Home</button>
+            <button>Our Package</button>
+            <button>Call Us</button>
+        </nav>
+    </header>
 </body>
 </html>
